<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.CollectorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_menu_collectors"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_description"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:elevation="4dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        android:backgroundTint="#66717E">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:hint="@string/hinted_search_text_collector"
                android:background="#66717E"
                android:paddingHorizontal="8dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#000000"
                android:inputType="text" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectorRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        tools:listitem="@layout/collector_item" />
</LinearLayout>
